--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "@vercel/node": "https://aistudiocdn.com/@vercel/node@^5.5.6"
+    "@vercel/node": "https://aistudiocdn.com/@vercel/node@^5.5.6",
+    "@netlify/functions": "https://aistudiocdn.com/@netlify/functions@^5.1.0"
   }
 }
 </script>
